ddp-workspace/projects/ddp-pancan/src/app/components/page-with-sections/page-with-sections.component.scss
@import '../../../styles/variables.scss';

.page {
    position: relative;
}

.title {
    margin: 4.56rem auto 2.25rem auto;
    text-align: center;
}

.section {
    padding: 4.69rem 0 4rem 2rem;
    display: flex;

    &:nth-of-type(odd) {
        padding-top: 3.75rem;
        padding-right: 2rem;
        padding-left: 0;

        .section__description {
            max-width: 785px;
        }
    }

    &:last-of-type {
        padding-bottom: 0;
    }

    &-1 {
       flex-direction: row-reverse;
    }

    &__side-image {
        .section-0 & {
            height: 642px;
            margin-right: 7rem;
        }

        .section-1 & {
            height: 621px;
            margin: 2.2rem 0 0 5.5rem;
        }

        .section-2 & {
            height: 474px;
            margin: 3rem 9.375rem 0 0;
        }
    }

    &__content {
        .section-0 & {
            padding-top: 2.2rem;
        }
    }

    &__title {
        margin: 0 0 2.5rem 0;

        .section-2 & {
            margin-bottom: 5.19rem;
        }
    }

    &__description {
        max-width: 840px;
    }

    &__text:first-child {
        margin-top: 0;
    }

    &__timeline-title {
        font-family: $primary-font;
        font-weight: 400;
        font-size: 1.75rem;
        letter-spacing: 0;
        line-height: 34px;
        margin-top: 4.3rem;
        margin-bottom: 3.1rem;
    }

    &__people-list {
        max-width: 785px;

        &__title {
            font-family: $primary-font;
            font-weight: 400;
            font-size: 1.75rem;
            letter-spacing: 0;
            line-height: 34px;
            padding-bottom: 23px;
            margin: 3.25rem 0;
            border-bottom: 1px solid #AAAAAA;
        }

        &__block {
            display: grid;
            grid-template-columns: 1fr 1fr;
            gap: 2rem;
        }

        .people-text {
            margin: 0;
        }
    }

    &__links {
        display: flex;
        flex-direction: column;
        width: 48.75rem;
        margin-top: 3rem;

        > a {
            opacity: 1;
            line-height: 2.75rem;
            font-size: 1.5rem;
            letter-spacing: -0.1px;
        }
    }

    &__examples {
        opacity: 1;

        li {
            margin-bottom: 2rem;
            font-size: 1.25rem !important;
        }

        .source {
            display: inline;
        }
    }

    &__final-text {
        margin-top: 3rem;
    }
}

.bottom-image {
    height: 300px;
    background-repeat: no-repeat;
    background-position: right top;
    background-size: contain;
    margin-top: -50px;
    background-image: url(/assets/images/oval_pink_right.png);

    &.about-us {
        background-image: url(/assets/images/oval_purple_right.png);
    }
}

@media screen and (max-width: $desktop-breakpoint) {
    .section__side-image {
        .section-0 & {
            height: 480px;
            margin-right: 5rem;
        }

        .section-1 & {
            height: 465px;
        }

        .section-2 & {
            height: 355px;
            margin-right: 7rem;
        }
    }
}

@media screen and (max-width: $tablet-breakpoint) {
    .section__side-image {
        height: 50vw !important;

        .section-0 & {
            margin-right: 3rem;
        }

        .section-2 & {
            margin-right: 5rem;
        }
    }

    .section-1 .section__content {
        max-width: 480px;
    }

    .section__links {
        width: inherit;
        padding-right: 1.5625rem !important;
    }

    .bottom-image {
        height: 35vw;
        margin-top: -25px;
    }
}

@media screen and (max-width: $mobile-breakpoint) {
    .section {
        display: block;
        padding-bottom: 2.5rem;

        &__title {
            margin-top: 2.5rem;

            .section-2 & {
                margin-top: 4.5rem;
            }
        }

        &__side-image {
            height: 172px !important;
            margin-top: 0 !important;
            margin-bottom: 2rem !important;

            .section-0 & {
                float: left;
            }

            .section-1 & {
                float: right;
                margin-left: 1.5rem;
            }

            .section-2 & {
                float: left;
            }
        }

        &__description {
            clear: both;
        }

        &:nth-of-type(odd) {
            .section__description {
                padding-left: 1.5625rem !important;
            }
        }

        &:nth-of-type(even) {
            .section__description {
                padding-right: 1.5625rem !important;
            }
        }

        &__people-list {
            padding-left: 2.5rem!important;
            padding-right: 1rem;
            clear: both;

            &__block {
                grid-template-columns: 1fr;
            }
        }
    }
}

